# monocole

./: Cargo.toml  README.md  agenttest.yml  build.rs  controllertest.yml
.devcontainer/: devcontainer.json  postcreatecommand.sh
protos/config/: config.proto
protos/controller/: control.proto
protos/cpuinfo/: cpuinfo.proto
protos/hardware/: hardware.proto
protos/os/: linux.proto
src/agent/: main.rs
src/controller/: main.rs
src/lib/: cassandra.rs  lib.rs
src/lib/config_lib/: mod.rs
src/lib/retrieval/: mod.rs  retrieval_trait.rs
src/lib/retrieval/cassandra/: mod.rs
src/lib/retrieval/config_lib/: mod.rs
src/lib/rpc_types/: config_types.rs  control_types.rs  cpu_types.rs  dimm_types.rs  disk_types.rs  hardware_types.rs  mod.rs  motherboard_types.rs  nic_types.rs  rpc_trait.rs
src/lib/storage/: cassandra.rs  driver.rs  mod.rs  polodb.rs  storage_trait.rs
