[package]
name = "monocole"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
tokio = {version = "1.22.0", features = ["full"]}
cdrs-tokio = {version = "8.0.0"}
env_logger ={ version = "0.10.0"}
tonic = {version = "0.9.1"}
prost ={ version = "0.11.2" }
config = "0.13.2"
clap = { version = "4.0.27"}
mockall ={ version = "0.11.3"}
scylla = { version = "0.8.0" }
thiserror= { version = "1.0.38"}
polodb_core = "4.0.0"
serde = "1.0.157"
async-trait = "0.1.68"

[build-dependencies]
tonic-build = "0.9.1"
serde = "1.0.157"

[[bin]]
name = "agent"
path = "src/agent/main.rs"

[[bin]]
name = "controller"
path = "src/controller/main.rs"

[lib]
name = "lib"
path = "src/lib/lib.rs"
